klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/association/NonVersionAssociationErrorTest.klass
package dummy

association NonVersionAssociation
{
    source: ExampleClass[1..1];
    target: ExampleVersion[1..1] owned;

    relationship this.id == ExampleVersion.id
}

class ExampleClass
{
    id: Long key;
}

class ExampleVersion
{
    id: Long key;
    number: Integer version;
}
